# npmi

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  package-lock.json  readme.md
.github/workflows/: build-docker-alpine.yml  build-docker-centos.yml  build-docker-debian.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml
docker/: alpine.Dockerfile  centos.Dockerfile  debian.Dockerfile
src/: npmci.cpp
src/crypto/: aes.hpp  rsa.hpp  sha256.hpp
src/format/: package_lock.hpp  tar.hpp
src/format/gzip/: bit_reader.cc  bit_reader.h  decompressor.cc  decompressor.h  huffman_decoder.cc  huffman_decoder.h
src/format/inflate/: binarytreenode.h  huffmantree.cpp  huffmantree.h  ifbstream.cpp  ifbstream.h  inflate.cpp  inflate.h  ringbuffer.cpp  ringbuffer.h  teestream.h
src/headers/: dependency.h  tar_header.h
src/proto/: http.hpp  https.hpp  tcp.hpp  tls.hpp
src/util/: args.hpp  fs.hpp  regex.h  thread_pool.hpp
test/: CMakeLists.txt
test/format/: package_lock.spec.cpp  tar.spec.cpp
test/proto/: tcp.spec.cpp  tls.spec.cpp
test/util/: args.spec.cpp  regex.spec.cpp
